Tests/AuthenticationTests/Mocks/Errors/Non200/MockOIDAuthorizationService_Non200.swift
import AppAuthCore
import UIKit

public class MockOIDAuthorizationService_Non200: OIDAuthorizationService {
    public override class func present(
        _ request: OIDAuthorizationRequest,
        presenting presentingViewController: UIViewController,
        prefersEphemeralSession: Bool,
        callback: @escaping OIDAuthorizationCallback
    ) -> any OIDExternalUserAgentSession {
        let session = MockOIDExternalUserAgentSession_Non200()
        session.callback = callback
        return session
    }
}
